fixed overflow and animation flicker

--- a/src/assets/styles/components/_about.scss
+++ b/src/assets/styles/components/_about.scss
@@ -1,5 +1,4 @@
 .about {
-  backface-visibility: hidden;
   &__grid {
     gap: 4rem;
 
