--- a/src/assets/styles/components/_navbar.scss
+++ b/src/assets/styles/components/_navbar.scss
@@ -1,5 +1,4 @@
 .nav {
-  backface-visibility: hidden;
   height: 4rem;
   padding: 4rem 20rem;
   background-color: var(--color-bg-light);
