--- a/src/assets/styles/components/_skills.scss
+++ b/src/assets/styles/components/_skills.scss
@@ -1,5 +1,4 @@
 .skills {
-  backface-visibility: hidden;
   background-color: var(--color-grey-lightest);
 
   &__grid {
